--- a/Bank App/adddraw.html
+++ b/Bank App/adddraw.html
@@ -21,7 +21,8 @@
                         <th>Address</th>
                         <th>Phone</th>
                         <th>Intial Balance</th>
-                        
+                        <th>Add</th>
+                        <th>withDraw</th>
 
                     </tr>
                     
