--- a/Bank App/single.html
+++ b/Bank App/single.html
@@ -22,6 +22,8 @@
                         <th>Phone</th>
                         <th>Intial Balance</th>
                         <th>Transactions</th>
+                        <th>Add</th>
+                        <th>withDraw</th>
                     </tr>
                 </thead>
             
